--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@react-three/postprocessing": "^2.16.2",
     "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/luxon": "^3.7.1",
     "@types/three": "^0.166.0",
     "@vercel/og": "^0.6.1",
+    "luxon": "^3.7.1",
     "next": "14.2.16",
     "next-themes": "^0.4.0",
     "next-view-transitions": "^0.3.0",
